<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_add_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_background_list"
    tools:context=".activity.AddTaskActivity">

    <TextView
        android:id="@+id/text_view_add_task_status_title"
        android:layout_width="104dp"
        android:layout_height="19dp"
        android:layout_marginTop="32dp"
        android:text="@string/task_status"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/spinner_add_task_status"
        app:layout_constraintTop_toBottomOf="@+id/text_edit_add_task_task_description" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_task_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/task_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_add_task_task_title"
        app:layout_constraintStart_toStartOf="@+id/edit_text_add_task_task_title"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button_add_task_activity_add_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:contentDescription="@string/settings"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_upload"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/task_description"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_edit_add_task_task_description"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_add_task_task_title" />

    <EditText
        android:id="@+id/edit_text_add_task_task_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/task_title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/text_edit_add_task_task_description"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/task_description"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button_add_task_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/add_task_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_add_task_team" />

    <Spinner
        android:id="@+id/spinner_add_task_status"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/task_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_add_task_status_title"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/spinner_add_task_team"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/add_task_speakable_team"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/team"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/spinner_add_task_team"
        app:layout_constraintTop_toBottomOf="@+id/spinner_add_task_status" />

    <ImageView
        android:id="@+id/image_view_add_task_activity_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/floating_action_button_add_task_activity_add_file"
        app:layout_constraintEnd_toStartOf="@+id/floating_action_button_add_task_activity_add_file"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>